Possible fix for navbar on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ header {
 	padding-left: 5px;
 	padding-right: 5px;
 	margin-top: 0px;
-	width: 100%;
+	max-width: 100%;
 	box-shadow: 5px 5px 5px grey;
 }
 
@@ -35,12 +35,17 @@ header {
 .navbar {
 	text-align: center;
     background-color: #00171d;	
-    color: white;
+	color: white;
+	margin-right: 0px;
+	margin-left: 0px;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	padding-left: 5px;
-	padding-right: 5px;
+	padding-left: 0px;
+	padding-right: 0px;
 	margin-top: 0px;
+	max-width: 100%;
+	left:0px;
+	right:0px;
 	box-shadow: 5px 5px 5px grey;
 }
 
